--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test istanbul cover mocha --timeout 10000 --compilers babel-core/register --require babel-polyfill ./tests/**.js",
+    "test": "NODE_ENV=test mocha --timeout 10000 --compilers js:@babel/register --require babel-polyfill ./tests/**.js",
     "start": "nodemon   index.js --ext js --exec babel-node",
     "coverage": "NODE_ENV=test babel-node ./node_modules/.bin/babel-istanbul cover _mocha -- ./tests/**.js --timeout 15000 --compilers js:babel-register",
     "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls"
@@ -16,7 +16,6 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "chai": "^4.2.0",
     "coveralls": "^3.0.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -27,7 +26,6 @@
     "koa-combine-routers": "^4.0.2",
     "koa-compose": "^4.1.0",
     "koa-router": "^8.0.0-alpha.1",
-    "mocha": "^5.2.0",
     "mongoose": "^5.4.5",
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "mongoose-unique-validator": "^2.0.2",
@@ -37,9 +35,11 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/register": "^7.0.0",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.5.5",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-istanbul": "^0.12.2",
@@ -49,11 +49,14 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "cross-env": "^5.2.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.19.1",
     "nyc": "^13.1.0"
   }
 }
