--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
     "sinon": "^7.2.3",
+    "mocha": "^5.2.0",
     "sinon-mongoose": "^2.2.1",
     "request": "^2.88.0"
   },
