--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^7.0.0-0",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-polyfill": "^6.26.0",
+    "@babel/register": "^7.5.5",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-plugin-istanbul": "^5.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "coveralls": "^3.0.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -32,6 +40,8 @@
     "morgan": "^1.9.1",
     "sinon": "^7.2.3",
     "mocha": "^5.2.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
     "sinon-mongoose": "^2.2.1",
     "request": "^2.88.0"
   },
